
* Updated for Apple's clang 12 compiler

* Fixed an issue in the way Ivy dependencies on SLF4J were coded.

* Removed the obsolete support for Ivy publishing to a BBN-internal Ivy repository.

* Fixed an issue on UNIX/Linux platforms that prevented the Parliament daemon from
  receiving SIGTERM signals, making Parliament difficult to use in a Docker container.

* Updated to Visual Studio 2019 (14.2)

* Updated to Apache Commons Daemon 1.2.3

* Updated to Jetty 9.4.36

* Numerous updates to bring in line with Java 15


=================================================

Version 2.7.13 (5/6/2019):

----------------------   Important -- Please Read !!!   -----------------------
---                                                                         ---
---  The file format of version 2.7.13 is not backwards compatible with     ---
---  versions 2.7.11 and older.  To upgrade the data stored in a prior      ---
---  release of Parliament, please follow the procedure in Section 2.1.2,   ---
---  "Upgrading an Existing Installation", in the Parliament User Guide.    ---
---  This can be found in your Parliament download, and it is also          ---
---  available here:                                                        ---
---                                                                         ---
---  https://github.com/SemWebCentral/parliament/tree/master/doc/UserGuide  ---
---                                                                         ---
-------------------------------------------------------------------------------

* Added handling for par:directType and par:directSubClassOf predicates to speed queries
  for most-derived types.  See the User Guide, Section 2.3.1, "Reserved Predicates", for
  more information.

* Enhanced the inference engine so that whenever the subproperty rule is on, statements
  of the form "?x a ?y" where ?y is one of the standard property classes will result in