@@ -7,6 +7,7 @@ log/
 /dependencies/
 /doc/UserGuide/acronyms.tex
 /doc/UserGuide/missfont.log
+/doc/UserGuide/ParliamentUserGuide.acr
 /doc/UserGuide/ParliamentUserGuide.aux
 /doc/UserGuide/ParliamentUserGuide.bbl
 /doc/UserGuide/ParliamentUserGuide.bcf
