@@ -118,7 +118,7 @@
 		<Set name="outputAggregationSize"><Property name="jetty.output.aggregation.size" default="8192"/></Set>
 		<Set name="requestHeaderSize"><Property name="jetty.request.header.size" default="8192"/></Set>
 		<Set name="responseHeaderSize"><Property name="jetty.response.header.size" default="8192"/></Set>
-		<Set name="sendServerVersion"><Property name="jetty.send.server.version" default="true"/></Set>
+		<Set name="sendServerVersion"><Property name="jetty.send.server.version" default="false"/></Set>
 		<Set name="sendDateHeader"><Property name="jetty.send.date.header" default="false"/></Set>
 		<Set name="headerCacheSize">512</Set>
 		<Set name="delayDispatchUntilContent"><Property name="jetty.delayDispatchUntilContent" default="false"/></Set>
@@ -186,7 +186,9 @@
 						<New id="Contexts" class="org.eclipse.jetty.server.handler.ContextHandlerCollection"/>
 					</Item>
 					<Item>
-						<New id="DefaultHandler" class="org.eclipse.jetty.server.handler.DefaultHandler"/>
+						<New id="DefaultHandler" class="org.eclipse.jetty.server.handler.DefaultHandler">
+							<Set name="showContexts">false</Set>
+						</New>
 					</Item>
 					<Item>
 						<New id="RequestLog" class="org.eclipse.jetty.server.handler.RequestLogHandler">
