@@ -1,0 +1,23 @@
+<VirtualHost _default_:80>
+	ServerName «your-servers-dns-name»
+	Redirect permanent / https://«your-servers-dns-name»
+</VirtualHost>
+
+<VirtualHost _default_:443>
+	ServerName «your-servers-dns-name»
+
+	<Proxy *>
+		Order deny,allow
+		Allow from all
+	</Proxy>
+
+	ProxyRequests Off
+	ProxyPass        "/" "http://localhost:8089/"
+	ProxyPassReverse "/" "http://localhost:8089/"
+
+	SSLEngine On
+	SSLProxyEngine On
+	SSLCertificateFile    /etc/server-certs/certificate.crt
+	SSLCertificateKeyFile /etc/server-certs/private.key
+	SSLCACertificateFile  /etc/server-certs/ca_bundle.crt
+</VirtualHost>
