@@ -1,0 +1,19 @@
+server {
+	listen 80;
+	server_name «your-servers-dns-name»;
+	return 301 https://«your-servers-dns-name»$request_uri;
+}
+
+server {
+	listen 443 ssl;
+	server_name «your-servers-dns-name»;
+
+	ssl_certificate     /etc/server-certs/certificate.crt;
+	ssl_certificate_key /etc/server-certs/private.key;
+
+	location / {
+		proxy_pass http://localhost:8089;
+		proxy_redirect off;
+		proxy_set_header X-Forwarded-For $remote_addr;
+	}
+}
