@@ -142,7 +142,7 @@
     </init-param>
     <init-param>
       <param-name>dirAllowed</param-name>
-      <param-value>true</param-value>
+      <param-value>false</param-value>
     </init-param>
     <init-param>
       <param-name>welcomeServlets</param-name>
